# InitWare

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  Makefile-man.am  Makefile.am  NEWS  README  README.md  a.out  configure.ac  test.c
cmd/: CMakeLists.txt  analyse.c  init.c  notify.c  shutdownd.c  systemctl.c
cmd/activate/: activate.c
cmd/analyze/: analyze-verify.c  analyze-verify.h  analyze.c
cmd/ask-password/: ask-password.c
cmd/busctl/: CMakeLists.txt  busctl-introspect.c  busctl-introspect.h  busctl.c
cmd/cgls/: cgls.c
cmd/cgroups-agent/: cgroups-agent.c
cmd/coredumpd/: coredump-vacuum.c  coredump-vacuum.h  coredump.c  coredumpctl.c  stacktrace.c
cmd/evlog/: CMakeLists.txt  backend.c  backend.h  cat.c  coredumpctl.c  evlogd.c  evlogd.h  jd_stream.c  jd_stream.h  journal-gatewayd.c  journal-qrcode.c  journal-qrcode.h  journalctl.c  journald-console.c  journald-console.h  journald-kmsg.c  journald-kmsg.h  journald-native.c  journald-native.h  journald-rate-limit.c  journald-rate-limit.h  journald-server.c  journald-server.h  journald-stream.c  journald-stream.h  journald-syslog.c  journald-syslog.h  journald.c  microhttpd-util.h  schema.sql  sink_sqlite.c  sink_sqlite.h  src_cred.c  src_cred.h  src_jdstream.c  src_jdstream.h
cmd/fusecgfs/: CMakeLists.txt  cgrpfs.c  cgrpfs.h  cgrpfs_vnops.c
cmd/iwctl/: CMakeLists.txt  iwctl.c  iwctlsubr.c
cmd/journal/: CMakeLists.txt  cat.c  catalog.c  catalog.h  compress.c  coredump-vacuum.c  coredump.c  coredumpctl.c  fsprg.c  journal-authenticate.c  journal-def.h  journal-file.c  journal-file.h  journal-internal.h  journal-qrcode.c  journal-qrcode.h  journal-send.c  journal-vacuum.h  journal-verify.c  journal-verify.h  journalctl.c  journald-audit.c  journald-audit.h  journald-console.c  journald-console.h  journald-kmsg.c  journald-kmsg.h  journald-native.c  journald-native.h  journald-rate-limit.c  journald-server.c  journald-server.h  journald-stream.c  journald-syslog.c  journald-syslog.h  journald-wall.c  journald.c  journald.conf  lookup3.c  lookup3.h  (+11 more)
cmd/linux/: binfmt.c  cgls.c  cgroups-agent.c  getty-generator.c  sleep.c
cmd/login/: CMakeLists.txt  inhibit.c  loginctl.c  logind-acl.h  logind-action.c  logind-button.c  logind-button.h  logind-core.c  logind-dbus.c  logind-device.c  logind-device.h  logind-inhibit.c  logind-inhibit.h  logind-seat-dbus.c  logind-seat.c  logind-seat.h  logind-session-dbus.c  logind-session-device.c  logind-session-device.h  logind-session.c  logind-session.h  logind-user-dbus.c  logind-user.c  logind-user.h  logind.c  logind.h  multi-seat-x.c  org.InitWare.SessionManager1.conf.in  org.InitWare.SessionManager1.service.in  pam-module.c  sd-login.c  sysfs-show.c  test-inhibit.c
cmd/manager/: CMakeLists.txt  automount.c  automount.h  cgroup.h  condition.c  condition.h  dbus-automount.c  dbus-cgroup.c  dbus-cgroup.h  dbus-delegate.c  dbus-device.c  dbus-execute.c  dbus-execute.h  dbus-job.c  dbus-manager.c  dbus-mount.c  dbus-path.c  dbus-scope.c  dbus-service.c  dbus-slice.c  dbus-snapshot.c  dbus-socket.c  dbus-swap.c  dbus-target.c  dbus-timer.c  dbus-unit.c  dbus-unit.h  dbus.c  dbus.h  delegate.c  delegate.h  device.c  device.h  execute.c  execute.h  job.c  job.h  killall.c  load-dropin.c  load-fragment-gperf.gperf.m4  (+37 more)
cmd/notify/: notify.c
cmd/nspawn/: nspawn-stub-pid1.c  nspawn.c
cmd/package/: CMakeLists.txt  initware-setup.sh.in
cmd/path/: path.c
cmd/rcng/: CMakeLists.txt  bootdone.service  rc  rcng-generator.sh  rcng2unit.c  ttys-generator.c  wait4pipe.c
cmd/run/: run.c
cmd/scheduler/: CMakeLists.txt  audit-fd.c  automount.c  automount.h  bus-endpoint.c  bus-endpoint.h  bus-policy.c  bus-policy.h  busname.c  busname.h  cgroup.c  cgroup.h  dbus-automount.c  dbus-busname.c  dbus-cgroup.c  dbus-cgroup.h  dbus-device.c  dbus-execute.c  dbus-execute.h  dbus-job.c  dbus-job.h  dbus-kill.c  dbus-kill.h  dbus-manager.c  dbus-manager.h  dbus-mount.c  dbus-mount.h  dbus-path.c  dbus-path.h  dbus-scope.c  dbus-scope.h  dbus-service.c  dbus-service.h  dbus-slice.c  dbus-slice.h  dbus-snapshot.c  dbus-snapshot.h  dbus-socket.c  dbus-socket.h  dbus-swap.c  (+72 more)
cmd/schedulerd/: CMakeLists.txt  InitWare.pc.in  audit-fd.c  automount.c  automount.h  cgroup.c  cgroup.h  dbus-automount.c  dbus-automount.h  dbus-cgroup.c  dbus-cgroup.h  dbus-device.h  dbus-execute.c  dbus-execute.h  dbus-job.c  dbus-job.h  dbus-kill.c  dbus-manager.c  dbus-manager.h  dbus-mount.c  dbus-mount.h  dbus-path.c  dbus-path.h  dbus-scope.c  dbus-scope.h  dbus-service.c  dbus-service.h  dbus-slice.c  dbus-slice.h  dbus-snapshot.c  dbus-socket.c  dbus-swap.c  dbus-timer.c  dbus-timer.h  dbus-unit.c  dbus-unit.h  dbus-util.c  dbus-util.h  dbus.c  dbus.h  (+62 more)
cmd/session/: CMakeLists.txt  inhibit.c  sessionctl.c  sysfs-show.c  test-inhibit.c  test-login-shared.c  test-login-tables.c
cmd/sessiond/: loginctl.c  logind-acl.c  logind-acl.h  logind-action.c  logind-action.h  logind-button.c  logind-button.h  logind-core.c  logind-dbus.c  logind-device.c  logind-device.h  logind-inhibit.c  logind-inhibit.h  logind-seat-dbus.c  logind-seat.h  logind-session-dbus.c  logind-session-device.c  logind-session.c  logind-session.h  logind-user-dbus.c  logind-user.c  logind-user.h  logind.c  logind.h  pam_systemd.c  sysfs-show.c  test-inhibit.c  user-sessions.c
cmd/svcctl/: CMakeLists.txt  svcctl-subr.c  svcctl.c  svcctl.h
cmd/syslog/: CMakeLists.txt  cat.c  compress.c  coredump.c  journalctl.c  journald-kmsg.c  journald-server.h  journald-stream.c  journald-syslog.c  microhttpd-util.c  microhttpd-util.h  syslogcat.c  syslogctl.c
cmd/syslogd/: CMakeLists.txt  journalctl.c  journald-audit.c  journald-audit.h  journald-console.c  journald-console.h  journald-kmsg.c  journald-kmsg.h  journald-native.c  journald-native.h  journald-rate-limit.h  journald-server.c  journald-server.h  journald-stream.c  journald-stream.h  journald-syslog.c  journald-syslog.h  journald-wall.c  journald-wall.h  journald.c  syslogctl.c
cmd/systemctl/: CMakeLists.txt  (+1 more)
lib/: CMakeLists.txt  libsystemd.pc.in
(+1874 files in other folders)
